<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/musicPlayerAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:singleLine="true"
            android:layout_marginHorizontal="@dimen/_56sdp"
            android:text="@string/playing_now"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/musicPlayerBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_13sdp"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="@dimen/_56sdp"
            app:cardElevation="@dimen/_5sdp"
            android:foreground="?attr/selectableItemBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/home_icon"
            tools:ignore="ContentDescription"
            android:background="@color/white"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_gravity="center"
        app:neomorph_background_color="@color/neomorph_background"
        app:neomorph_elevation="3dp"
        app:neomorph_highlight_color="@color/neomorph_highlight"
        app:neomorph_layer_type="hardware"
        app:neomorph_shadow_color="@color/neomorph_shadow"
        app:neomorph_shadow_type="outer"
        app:neomorph_shadow_visible="true"
        app:neomorph_view_type="circular">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/musicPlayerImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/music"
            android:scaleType="fitXY"
            android:src="@drawable/music_logo"
            app:riv_border_color="@color/neomorph_highlight"
            app:riv_border_width="@dimen/_5sdp"
            app:riv_corner_radius="@dimen/_250sdp"
            tools:ignore="UnusedAttribute" />

    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <TextView
        android:id="@+id/musicPlayerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:singleLine="true"
        android:text="@string/album"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/musicPlayerSongSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/musicPlayerStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/roboto_thin"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/musicPlayerEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/roboto_thin"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/musicPlayerPrevBtn"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/prev_icon"
                android:layout_marginHorizontal="20dp"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/musicPlayerPlayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp" />

            <ImageView
                android:id="@+id/musicPlayerNextBtn"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/next_icon"
                android:layout_marginHorizontal="20dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/musicPlayerVolumeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/volume"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>