<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/homeAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/homeToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways|scroll|snap"
            app:title="@string/app_name"
            app:titleTextColor="@color/black" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/homeTabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            app:tabIndicatorColor="@color/black"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/homeViewPager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/homeCurrent_song_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeCurrent_song_image"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:scaleType="fitXY"
                android:src="@drawable/music_logo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/homeCurrent_song_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:fontFamily="@font/robotobold"
                    android:gravity="center"
                    android:paddingStart="@dimen/_5sdp"
                    android:singleLine="true"
                    android:text="@string/let_s_start_music"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />


                <TextView
                    android:id="@+id/homeCurrent_song_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotolight"
                    android:gravity="center"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:singleLine="true"
                    android:text="@string/play_now"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:neomorph_background_color="@color/neomorph_background"
                app:neomorph_elevation="2dp"
                app:neomorph_highlight_color="@color/neomorph_highlight"
                app:neomorph_shadow_color="@color/neomorph_shadow"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="circular">

                <RelativeLayout
                    android:layout_width="@dimen/_56sdp"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/homeCurrent_song_progress"
                        style="?android:progressBarStyleHorizontal"
                        android:layout_width="@dimen/_56sdp"
                        android:layout_height="@dimen/_56sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_3sdp"
                        android:progress="100"
                        android:progressDrawable="@drawable/circle" />

                    <ImageView
                        android:id="@+id/homeCurrent_song_playBtn"
                        android:layout_width="@dimen/_56sdp"
                        android:layout_height="@dimen/_56sdp"
                        android:layout_gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:scaleType="center"
                        android:src="@drawable/play_icon"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>
            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>